--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-					<button type="button" class="btn btn-primary" onclick="loadDoc('https://seestats.org/game/smurfs')">Smurfs</button>
-					<button type="button" class="btn btn-success" onclick="loadDoc('https://seestats.org/game/matrix')">Matrix</button>
-					<button type="button" class="btn btn-danger" onclick="loadDoc('https://seestats.org/game/hackers')">Hackers</button>
+					<button type="button" class="btn smurfs-flat-button" onclick="loadDoc('https://seestats.org/game/smurfs')">Smurfs</button>
+					<button type="button" class="btn matrix-flat-button" onclick="loadDoc('https://seestats.org/game/matrix')">Matrix</button>
+					<button type="button" class="btn hackers-flat-button" onclick="loadDoc('https://seestats.org/game/hackers')">Hackers</button>
                     </div>
                 </div>
             </div>
